# tree-sitter-language-pack

./: .gitignore  .golangci.yml  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  biome.json  composer.json  deny.toml  go.work  llms.txt  mkdocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.ai-rulez/: config.yaml
.github/workflows/: ci-c.yaml  ci-cli.yaml  ci-csharp.yaml  ci-docker.yaml  ci-elixir.yaml  ci-go.yaml  ci-java.yaml  ci-node.yaml  ci-php.yaml  ci-python.yaml  ci-ruby.yaml  ci-rust.yaml  ci-validate.yaml  ci-wasm.yaml  docs.yaml  publish-docker.yaml  publish.yaml
.task/: c.yml  csharp.yml  elixir.yml  go.yml  java.yml  node.yml  php.yml  ruby.yml  rust.yml  wasm.yml
.task/checksum/: clone
crates/ts-pack-cli/: Cargo.toml  README.md
crates/ts-pack-cli/src/: main.rs
crates/ts-pack-cli/src/commands/: build.rs  list.rs  mod.rs
crates/ts-pack-core/: Cargo.toml  README.md  build.rs
crates/ts-pack-elixir/: Cargo.toml  README.md  mix.exs
crates/ts-pack-ffi/: Cargo.toml  README.md  cbindgen.toml
crates/ts-pack-go/: README.md  tspack.go
crates/ts-pack-index/: Cargo.toml
crates/ts-pack-index/src/: asset_phase.rs  call_resolution.rs  call_resolution_policy.rs  clone_enrich.rs  duplicate.rs  go.rs  graph_schema.rs  lib.rs  model.rs  parse_phase.rs  pathing.rs  prep_phase.rs  provenance.rs  swift.rs  tags.rs  write_phase.rs  writers.rs
crates/ts-pack-java/: README.md  pom.xml
crates/ts-pack-node/: .npmignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  ts-pack-node.darwin-arm64.node  ts-pack-node.node
crates/ts-pack-php/: Cargo.toml  README.md
crates/ts-pack-php/src/: lib.rs
crates/ts-pack-python/: Cargo.toml  README.md  pyproject.toml
crates/ts-pack-ruby/: Cargo.toml  Gemfile  README.md  Rakefile  extconf.rb  tree_sitter_language_pack.gemspec
crates/ts-pack-wasm/: Cargo.toml  README.md  package.json
docker/: Dockerfile
docs/: contributing.md  fork-boundary.md  index.md  languages.md  llms.txt  supported-languages.md
docs/api/: c-ffi.md  cli.md  csharp.md  elixir.md  go.md  java.md  php.md  python.md  ruby.md  rust.md  typescript.md  wasm.md
docs/concepts/: architecture.md  code-intelligence.md  download-model.md
docs/css/: extra.css
docs/getting-started/: installation.md  quickstart.md
docs/guides/: chunking.md  cli.md  configuration.md  extraction.md  intelligence.md  parsing.md
docs/overrides/: main.html
e2e/c/: CMakeLists.txt  helpers.h  test_error_handling  test_error_handling.c  test_parsing  test_parsing.c  test_registry  test_registry.c  test_smoke  test_smoke.c
e2e/csharp/: E2ETests.csproj  MetadataTests.cs  ProcessTests.cs  SmokeTests.cs  TreeInspectionTests.cs
e2e/elixir/: mix.exs
e2e/go/: go.mod  (+8 more)
fixtures/: schema.json
scripts/: check_grammar_updates.py  clone_vendors.py  generate_grammar_table.py  pin_vendors.py  readme_config.yaml  sync_versions.py
sources/: language_definitions.json  license_cache.json
tests/test_apps/c/: CMakeLists.txt  smoke_test.c
tools/snippet-runner/: Cargo.toml
tools/snippet-runner/src/validators/: java.rs  typescript.rs
(+729 files in other folders)
