[package]
name = "ts-pack-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for tree-sitter language pack - manage parser configurations"

[[bin]]
name = "ts-pack"
path = "src/main.rs"

[dependencies]
tree-sitter-language-pack = { path = "../ts-pack-core", features = ["config"] }
clap = { workspace = true }
toml_edit = { workspace = true }
