[package]
name = "ts-pack-php"
version = "1.0.0-rc.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kreuzberg-dev/tree-sitter-language-pack"
description = "PHP ext-php-rs bindings for tree-sitter language pack"
publish = false

[lib]
name = "ts_pack_php"
crate-type = ["cdylib"]
test = false

[dependencies]
ts-pack-core = { package = "ts-pack-core-vendored", path = "vendor/ts-pack-core", features = [
  "serde",
] }
serde_json = "1"
ext-php-rs = "0.15"

[package.metadata.cargo-machete]
ignored = ["serde_json"]
