[package]
name = "snippet-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "snippet-runner"
path = "src/main.rs"

[lib]
name = "snippet_runner"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
which = "8"
